--- a/callback.html
+++ b/callback.html
@@ -22,7 +22,7 @@ hr {
 <h1>OAuth callback page for "Obtain private app publishing rights"</h1>
 
 <p>
-  This page is the callback URL for the OAuth process initiated by using the <a href="https://github.com/janpio/fastlane-plugin-managed_google_play">Fastlane Plugin for Manage Google Play</a> action <a href="https://github.com/janpio/fastlane-plugin-managed_google_play#get_managed_play_store_publishing_rights"><code>get_managed_play_store_publishing_rights</code></a>. The general process is described in <a href="https://developers.google.com/android/work/play/custom-app-api/get-started#obtain_private_app_publishing_rights">"Get started with custom app publishing > Obtain private app publishing rights"</a>
+  This page is the callback URL for the OAuth process initiated by using the <a href="TODO get_managed_play_store_publishing_rights"><code>get_managed_play_store_publishing_rights</code></a> fastlane action. The general process is described in <a href="https://developers.google.com/android/work/play/custom-app-api/get-started#obtain_private_app_publishing_rights">"Get started with custom app publishing > Obtain private app publishing rights"</a>
 </p>
 
 <h2>Result</h2>
@@ -46,7 +46,7 @@ if(params.get('developerAccountLink')) {
 </script>
 
 <p>
-  The Developer Account ID is required for further usage as a parameter <code>developer_account_id</code> of the plugin action <a href="https://github.com/janpio/fastlane-plugin-managed_google_play#create_app_on_managed_play_store"><code>create_app_on_managed_play_store</code></a>.
+  The Developer Account ID is required for further usage as a parameter <code>developer_account_id</code> of the fastlane action <a href="TODO create_app_on_managed_play_store"><code>create_app_on_managed_play_store</code></a>.
 </p>
 
 <hr />
@@ -58,7 +58,7 @@ if(params.get('developerAccountLink')) {
 <hr />
 
 <p>
-  Attention: The data is only output for you, not captured or logged in any way. The sourcecode for this plain HTML page is at <a href="https://github.com/janpio/fastlane-plugin-managed_google_play/blob/gh-pages/index.html">https://github.com/janpio/fastlane-plugin-managed_google_play/blob/gh-pages/index.html</a>.
+  Attention: The data is only output for you, not captured or logged in any way. The sourcecode for this plain HTML page is at <a href="https://github.com/fastlane/managed_google_play-callback">https://github.com/fastlane/managed_google_play-callback</a>.
 </p>
 
 </body>
